syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.iohk.atala.kycbridge.protos";

package io.iohk.atala.kycbridge.protos;

service KycBridgeService {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse) {}
}

message CreateAccountRequest {
}

message CreateAccountResponse {
  string connection_token = 1;
}
